// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cartesian choices empty prop 1`] = `Array []`;

exports[`cartesian choices multi prop 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "",
      },
    },
    "title": "{\\"oneProp\\":true,\\"twoProp\\":\\"\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "test",
      },
    },
    "title": "{\\"oneProp\\":true,\\"twoProp\\":\\"test\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "",
      },
    },
    "title": "{\\"oneProp\\":false,\\"twoProp\\":\\"\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "test",
      },
    },
    "title": "{\\"oneProp\\":false,\\"twoProp\\":\\"test\\"}",
  },
]
`;

exports[`cartesian choices nested prop 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": Object {
          "accept": true,
          "story": "yes",
        },
        "twoProp": "",
      },
    },
    "title": "{\\"twoProp\\":\\"\\",\\"oneProp\\":{\\"story\\":\\"yes\\",\\"accept\\":true}}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": Object {
          "accept": true,
          "story": "yes",
        },
        "twoProp": "test",
      },
    },
    "title": "{\\"twoProp\\":\\"test\\",\\"oneProp\\":{\\"story\\":\\"yes\\",\\"accept\\":true}}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": Object {
          "accept": false,
          "story": "yes",
        },
        "twoProp": "",
      },
    },
    "title": "{\\"twoProp\\":\\"\\",\\"oneProp\\":{\\"story\\":\\"yes\\",\\"accept\\":false}}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": Object {
          "accept": false,
          "story": "yes",
        },
        "twoProp": "test",
      },
    },
    "title": "{\\"twoProp\\":\\"test\\",\\"oneProp\\":{\\"story\\":\\"yes\\",\\"accept\\":false}}",
  },
]
`;

exports[`cartesian choices single prop 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
      },
    },
    "title": "{\\"oneProp\\":true}",
  },
]
`;

exports[`cartesian choices some invalid 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "",
      },
    },
    "title": "{\\"oneProp\\":true,\\"twoProp\\":\\"\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "foobar",
      },
    },
    "title": "{\\"oneProp\\":true,\\"twoProp\\":\\"foobar\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "foobaz",
      },
    },
    "title": "{\\"oneProp\\":true,\\"twoProp\\":\\"foobaz\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "test",
      },
    },
    "title": "{\\"oneProp\\":true,\\"twoProp\\":\\"test\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "",
      },
    },
    "title": "{\\"oneProp\\":false,\\"twoProp\\":\\"\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "foobar",
      },
    },
    "title": "{\\"oneProp\\":false,\\"twoProp\\":\\"foobar\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "foobaz",
      },
    },
    "title": "{\\"oneProp\\":false,\\"twoProp\\":\\"foobaz\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "test",
      },
    },
    "title": "{\\"oneProp\\":false,\\"twoProp\\":\\"test\\"}",
  },
]
`;

exports[`cartesian legends render title 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "",
      },
    },
    "title": "{\\"oneProp\\":\\"yes!\\",\\"twoProp\\":\\"\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "foobar",
      },
    },
    "title": "{\\"oneProp\\":\\"yes!\\",\\"twoProp\\":\\"foobar\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "foobaz",
      },
    },
    "title": "{\\"oneProp\\":\\"yes!\\",\\"twoProp\\":\\"foobaz\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": "test",
      },
    },
    "title": "{\\"oneProp\\":\\"yes!\\",\\"twoProp\\":\\"test\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "",
      },
    },
    "title": "{\\"oneProp\\":\\"no :(\\",\\"twoProp\\":\\"\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "foobar",
      },
    },
    "title": "{\\"oneProp\\":\\"no :(\\",\\"twoProp\\":\\"foobar\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "foobaz",
      },
    },
    "title": "{\\"oneProp\\":\\"no :(\\",\\"twoProp\\":\\"foobaz\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": "test",
      },
    },
    "title": "{\\"oneProp\\":\\"no :(\\",\\"twoProp\\":\\"test\\"}",
  },
]
`;

exports[`cartesian legends render title where props are nested 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": Object {
          "colors": Object {
            "bg": false,
            "fg": true,
          },
        },
      },
    },
    "title": "{\\"oneProp\\":\\"yes!\\",\\"twoProp\\":{\\"colors\\":{\\"fg\\":\\"yes!\\",\\"bg\\":\\"no :(\\"}}}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
        "twoProp": Object {
          "colors": Object {
            "bg": false,
            "fg": false,
          },
        },
      },
    },
    "title": "{\\"oneProp\\":\\"yes!\\",\\"twoProp\\":{\\"colors\\":{\\"fg\\":\\"no :(\\",\\"bg\\":\\"no :(\\"}}}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": Object {
          "colors": Object {
            "bg": false,
            "fg": true,
          },
        },
      },
    },
    "title": "{\\"oneProp\\":\\"no :(\\",\\"twoProp\\":{\\"colors\\":{\\"fg\\":\\"yes!\\",\\"bg\\":\\"no :(\\"}}}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": false,
        "twoProp": Object {
          "colors": Object {
            "bg": false,
            "fg": false,
          },
        },
      },
    },
    "title": "{\\"oneProp\\":\\"no :(\\",\\"twoProp\\":{\\"colors\\":{\\"fg\\":\\"no :(\\",\\"bg\\":\\"no :(\\"}}}",
  },
]
`;

exports[`cartesian vanilla empty 1`] = `Array []`;

exports[`cartesian vanilla empty prop 1`] = `Array []`;

exports[`cartesian vanilla empty prop, complex 1`] = `Array []`;

exports[`cartesian vanilla multi prop 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": "one-1",
        "twoProp": "two",
      },
    },
    "title": "{\\"oneProp\\":\\"one-1\\",\\"twoProp\\":\\"two\\"}",
  },
  Object {
    "story": Object {
      "props": Object {
        "oneProp": "one-2",
        "twoProp": "two",
      },
    },
    "title": "{\\"oneProp\\":\\"one-2\\",\\"twoProp\\":\\"two\\"}",
  },
]
`;

exports[`cartesian vanilla single prop 1`] = `
Array [
  Object {
    "story": Object {
      "props": Object {
        "oneProp": true,
      },
    },
    "title": "{\\"oneProp\\":true}",
  },
]
`;
